--- a/css/style_black_orange.css
+++ b/css/style_black_orange.css
@@ -5197,8 +5197,6 @@ li.sidebar-lower-level.active span {
   background-color: #f8d1b9 !important;
 }
 .summary-block, .overview-block, .main-screen-white, .connectedSortable { border-color:#dc6214 !important; }
-.theme-color-icon {
-  filter: invert(49%) sepia(42%) saturate(7334%) hue-rotate(6deg) brightness(98%) contrast(84%) !important;
-}
+.theme-color-icon { filter: invert(49%) sepia(42%) saturate(7334%) hue-rotate(6deg) brightness(98%) contrast(84%) !important; }
 .calendar .main-screen .panel .panel-title > a:hover { color:#dc6214 !important; }
 .theme-color-border-bottom { border-bottom:2px solid #dc6214 !important; }
